<resources>
    <string name="app_name">Online Barter Trader</string>
    <string name="EMPTY_EMAIL">Email address is required.</string>
    <string name="EMPTY_USERNAME">Username is required.</string>
    <string name="EMPTY_PASSWORD">Password is required.</string>
    <string name="NON_ALPHA_NUMERIC_USER_NAME">Non-alphanumeric user name</string>
    <string name="INVALID_EMAIL_ADDRESS">Invalid email address</string>
    <string name="INVALID_PASSWORD">Invalid password</string>
    <string name="EMPTY_STRING">One of the required fields is empty.</string>
    <string name="EmailAddressConflict">Sorry, the email has been registered.</string>
    <string name="UsernameConflict">Sorry, the username has been used.</string>
    <string name="Search">🔍</string>
    <string name="SearchButton">Search</string>
    <string name="ViewProfile">View Profile</string>
    <string name="LOGIN">Log in</string>
    <string name="LOGOUT">Log Out</string>
    <string name="REGISTER">Register</string>
    <string name="InputEmailAddress">Email Address</string>
    <string name="InputUserName">Username</string>
    <string name="InputPassword">Password</string>
    <string name="InputConfirmPassword">Confirm Password</string>
    <string name="ERROR_IN_LOGIN">Incorrect username or password</string>
    <string name="AddPreference0">Update Preference</string>
    <string name="UpdatePreference">Update Preference</string>
    <string name="AddPreference1">🚗 Cars &amp; Vehicles</string>
    <string name="AddPreference2">🏡 Real Estate</string>
    <string name="AddPreference3">📱 Electronic Products</string>
    <string name="AddPreference4">🪑 Furniture</string>
    <string name="AddPreference5">Ⓡ Perfume</string>
    <string name="AddPreference6">🧸 Toy</string>
    <string name="AddPreference7">🏒 Sport Equipment</string>
    <string name="AddPreference8">🐈 Pets</string>
    <string name="AddPreference9">📚 Textbook</string>
    <string name="AddPreference10">🆓 Free Stuff</string>
    <string name="btnCancel">Cancel</string>
    <string name="PreferenceUpdate">Update</string>
    <string name="EmailAddress">Email: </string>
    <string name="EmailAddressExample">example@email.ca</string>
    <string name="FriendList">Friend List:</string>
    <string name="ButtonBack">Back</string>
    <string name="ButtonAdd">Add</string>
</resources>