<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferencePage"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/appBtnPreference1"
        android:text="@string/AddPreference1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/appBtnPreference2"
        android:text="@string/AddPreference2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/appBtnPreference3"
        android:text="@string/AddPreference3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/appBtnPreference4"
        android:text="@string/AddPreference4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/appBtnPreference5"
        android:text="@string/AddPreference5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/appBtnPreference6"
        android:text="@string/AddPreference6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/appBtnPreference7"
        android:text="@string/AddPreference7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/appBtnPreference8"
        android:text="@string/AddPreference8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/appBtnPreference9"
        android:text="@string/AddPreference9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/appBtnPreference10"
        android:text="@string/AddPreference10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/appBtnPreferenceCancel"
        android:text="@string/btnCancel"
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/warning"/>

    <Button
        android:id="@+id/appBtnPreferenceConfirm"
        android:text="@string/PreferenceUpdate"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/pass"
        />

</LinearLayout>